python-hildon (0.9.0-1maemo14) unstable; urgency=low

  * hildon.Note: allow note_type argument to also receive a hildon.NoteType,
    as in the note-type property (Fixes MB#5243).

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Wed, 11 Nov 2009 15:39:25 -0400

python-hildon (0.9.0-1maemo13) unstable; urgency=low

  * hildon_gen_defs.sh: do not generate enum instrospection code for Hildon
    libraries, which is now included into the libraries themselves
    (Fixes: MB#5143).
  * Hildon API updates.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Mon, 12 Oct 2009 01:28:19 -0400

python-hildon (0.9.0-1maemo12) unstable; urgency=low

  [ Bruno dos Santos de Araujo ]
  * Add missing functions from hildon.PannableArea: scroll_to() and jump_to()
    (Fixes: MB#4969).
  * Add missing functions from hildon.AppMenu: get_items() (Fixes: MB#5015)
    and get_filters().
  [ Anderson Lizardo ]
  * hildon_gen_defs.sh: mark hildon_touch_selector_new_text as constructor.
  * hildon_gen_defs.sh: avoid parsing gtkfilesystem.h (breaks the glib-mkenums
    parser).
  * Add unit tests for hildon.AppMenu.get_items() and
    hildon.AppMenu.get_filters().
  * Update Hildon API (Fixes: MB#5026).

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Mon, 21 Sep 2009 14:41:52 -0400

python-hildon (0.9.0-1maemo11) unstable; urgency=low

  * Add "text" parameter on HildonTouchSelector constructor (Fixes: MB#4821)

 -- Bruno dos Santos de Araujo <bruno.araujo@indt.org.br>  Mon, 10 Aug 2009 12:14:40 -0400

python-hildon (0.9.0-1maemo10) unstable; urgency=low

  * Add missing dependency on python-notify. Fixes MB#4791.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Thu, 16 Jul 2009 11:33:31 -0400

python-hildon (0.9.0-1maemo9) unstable; urgency=low

  [ Bruno dos Santos de Araujo ]
  * Implement missing GTK constructors (Fixes: MB#4628)

  [ Lauro Moura ]
  * Add hildon.TouchSelectorEntry constructor. Fixes: MB#4647.

  [ Renato Araujo Oliveira Filho ]